--- a/mypage1.html
+++ b/mypage1.html
@@ -205,6 +205,164 @@
 				</ul>
 			</nav>
 
+			<h2 class="subTitle2">주문내역조회</h2>
+			<p class="titBtn">
+				<a href="#" class="btnM2 btnType11">전체</a>
+				<a href="#" class="btnM2 btnType11">1개월</a>
+				<a href="#" class="btnM2 btnType11 txtColor3">3개월</a>
+				<a href="#" class="btnM2 btnType11">기간선택</a>
+				<span class="datePick">
+					<input type="text" class="inputTxt" value="2016-06-04" /> 
+					~
+					<input type="text" class="inputTxt" value="2016-06-04" /> 
+				</span>
+				<a href="#" class="btnM2 btnType9">검색</a>
+			</p>
+
+
+			<div class="bbsList bbsListType2">
+				<table>
+					<caption>주문내역조회 게시판</caption>
+					<colgroup>
+						<col style="width:165px" />
+						<col style="width:108px" />
+						<col />
+						<col style="width:195px" />
+						<col style="width:175px" />
+					</colgroup>
+					<thead>
+						<tr>
+							<th scope="col">주문일</th>
+							<th scope="col" colspan="2">주문번호/상품명/수량</th>
+							<th scope="col">결제금액</th>
+							<th scope="col">주문상태</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="orderDate" rowspan="2">
+								2016.09.20<br />
+								<a href="#">주문상세보기</a>
+							</td>
+							<td class="prodImg">
+								<img src="images/img_sample.gif" alt="">
+							</td>
+							<td class="prodInfo">
+								<span class="num">2016020_41454635438135</span>
+								<span class="name">[더마허브] 화이트제이드 마스크</span>
+								<span class="type">(수량 : 1개) </span>
+							</td>
+							<td class="prodPrice" rowspan="2">
+								<span class="tit">결제금액 <span>|</span></span> <strong class="money">45,000</strong> 원<br />
+								<span class="tit">결제방식 <span>|</span></span> 신용카드
+							</td>
+							<td class="orderStatus">
+								<strong class="status">발송완료</strong>
+								<a href="#" class="btnS btnType11">배송위치확인</a>
+							</td>
+						</tr>
+						<tr>
+							<td class="prodImg">
+								<img src="images/img_sample.gif" alt="">
+							</td>
+							<td class="prodInfo">
+								<span class="num">2016020_41454635438135</span>
+								<span class="name">[더마허브] 화이트제이드 마스크</span>
+								<span class="type">(수량 : 1개) </span>
+							</td>
+							<td class="orderStatus">
+								<strong class="status">배송완료</strong>
+								<a href="#" class="btnS btnType1">주문취소</a>
+								<a href="#" class="btnS btnType15">리뷰작성하기</a>
+							</td>
+						</tr>
+						<tr>
+							<td class="orderDate">
+								2016.09.20<br />
+								<a href="#">주문상세보기</a>
+							</td>
+							<td class="prodImg">
+								<img src="images/img_sample.gif" alt="">
+							</td>
+							<td class="prodInfo">
+								<span class="num">2016020_41454635438135</span>
+								<span class="name">[더마허브] 화이트제이드 마스크</span>
+								<span class="type">(수량 : 1개) </span>
+							</td>
+							<td class="prodPrice">
+								<span class="tit">결제금액 <span>|</span></span> <strong class="money">45,000</strong> 원<br />
+								<span class="tit">결제방식 <span>|</span></span> 신용카드
+							</td>
+							<td class="orderStatus">
+								<strong class="status">배송완료</strong>
+								<span class="reviewCom">리뷰작성완료</span>
+							</td>
+						</tr>
+						<tr>
+							<td class="orderDate">
+								2016.09.20<br />
+								<a href="#">주문상세보기</a>
+							</td>
+							<td class="prodImg">
+								<img src="images/img_sample.gif" alt="">
+							</td>
+							<td class="prodInfo">
+								<span class="num">2016020_41454635438135</span>
+								<span class="name">[더마허브] 화이트제이드 마스크</span>
+								<span class="type">(수량 : 1개) </span>
+							</td>
+							<td class="prodPrice">
+								<span class="tit">결제금액 <span>|</span></span> <strong class="money">45,000</strong> 원<br />
+								<span class="tit">결제방식 <span>|</span></span> 신용카드
+							</td>
+							<td class="orderStatus">
+								<strong class="status">배송완료</strong>
+								<a href="#" class="btnS btnType11">배송위치확인</a>
+							</td>
+						</tr>
+						<tr>
+							<td class="orderDate">
+								2016.09.20<br />
+								<a href="#">주문상세보기</a>
+							</td>
+							<td class="prodImg">
+								<img src="images/img_sample.gif" alt="">
+							</td>
+							<td class="prodInfo">
+								<span class="num">2016020_41454635438135</span>
+								<span class="name">[더마허브] 화이트제이드 마스크</span>
+								<span class="type">(수량 : 1개) </span>
+							</td>
+							<td class="prodPrice">
+								<span class="tit">결제금액 <span>|</span></span> <strong class="money">45,000</strong> 원<br />
+								<span class="tit">결제방식 <span>|</span></span> 신용카드
+							</td>
+							<td class="orderStatus">
+								<strong class="status">배송완료</strong>
+								<a href="#" class="btnS btnType11">배송위치확인</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="pagination">
+				<a href="#" class="pageNavi pageStart">처음으로</a>
+				<a href="#" class="pageNavi pagePrev">이전</a>
+				<span class="pageNum">
+					<strong>1</strong>
+					<a href="#">2</a>
+					<a href="#">3</a>
+					<a href="#">4</a>
+					<a href="#">5</a>
+					<a href="#">6</a>
+					<a href="#">7</a>
+					<a href="#">8</a>
+					<a href="#">9</a>
+				</span>
+				<a href="#" class="pageNavi pageNext">다음</a>
+				<a href="#" class="pageNavi pageEnd">끝으로</a>
+			</div>
+
 			<section class="mypageProdList">
 				<h2>고객님을 위한 맞춤 상품</h2>
 				<div class="prodList">
