--- a/layout.html
+++ b/layout.html
@@ -291,6 +291,11 @@
 			</p>
 			<br />
 			<p>
+				<button type="button" class="btnB3 btnType15">버튼타입15</button>
+				<a href="#" class="btnB3 btnType15">링크</a>
+			</p>
+			<br />
+			<p>
 				<a href="#" class="btnB btnFacebook" style="width:250px;">페이스북 로그인</a>
 				<a href="#" class="btnB btnNaver" style="width:250px;">네이버 로그인</a>
 			</p>
