--- a/mypage1_view.html
+++ b/mypage1_view.html
@@ -187,141 +187,162 @@
 			<p class="location">
 				<a href="#">Home</a> &gt;
 				<span>마이페이지</span> &gt;
-				<span>배송주소록 관리</span>
+				<span>주문상세보기</span>
 			</p>
 		</div>
 		<div class="contents">
 
 			<nav class="myTab">
 				<ul>
-					<li><a href="#" class="tab1">주문내역조회</a></li>
+					<li class="current"><a href="#" class="tab1">주문내역조회</a></li>
 					<li><a href="#" class="tab2">관심상품</a></li>
 					<li><a href="#" class="tab3">내 적립금</a></li>
 					<li><a href="#" class="tab4">내 쿠폰</a></li>
 					<li><a href="#" class="tab5">리뷰</a></li>
 					<li><a href="#" class="tab6">1:1문의하기</a></li>
-					<li class="current"><a href="#" class="tab7">배송주소록 관리</a></li>
+					<li><a href="#" class="tab7">배송주소록 관리</a></li>
 					<li><a href="#" class="tab8">내 정보수정</a></li>
 				</ul>
 			</nav>
 
-			<h2 class="subTitle2">배송주소록 관리</h2>
-			<p class="titBtn"><a href="#" class="btnM2 btnType9">신규 배송지 등록</a></p>
-
+			<h2 class="subTitle2">주문상세보기</h2>
 			<div class="bbsList">
 				<table>
-					<caption>배송주소록 게시판</caption>
+					<caption>주문상세</caption>
 					<colgroup>
-						<col style="width:195px" />
+						<col style="width:135px" />
 						<col />
-						<col style="width:200px" />
+						<col style="width:165px" />
+						<col style="width:125px" />
+						<col style="width:150px" />
 					</colgroup>
 					<thead>
 						<tr>
-							<th scope="col">배송지명</th>
-							<th scope="col">배송주소</th>
-							<th scope="col">관리</th>
+							<th scope="col" colspan="2">주문번호/상품명</th>
+							<th scope="col">판매가</th>
+							<th scope="col">수량</th>
+							<th scope="col">합계</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td>기본배송지</td>
-							<td class="adrs">
-								받는사람 : 이정은<br />
-								000-000-1488 / 010-3797-1488<br />
-								주소 : 서울서초구효령로67길 34,101동702호(서초동,경남아너스빌)
+							<td class="prodImg2">
+								<img src="images/img_sample.gif" alt="">
 							</td>
-							<td>
-								<button type="button" class="btnS btnType6">수정</button>
-								<button type="button" class="btnS btnType6">삭제</button>
+							<td class="alL">
+								[더마허브] 화이트제이드 마스크
+							</td>
+							<td><span class="txtColor3">45,000</span>원</td>
+							<td>1개</td>
+							<td><span class="txtColor3">45,000</span>원</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<td colspan="5">
+								주문금액합계 45,000원 <span>+</span>
+								배송비 0원 <span>=</span>
+								<strong class="txtColor3">45,000</strong>원
 							</td>
 						</tr>
+					</tfoot>
+				</table>
+			</div>
+
+			<div class="tableList tableListType3 subSection">
+				<table>
+					<caption>주문정보</caption>
+					<colgroup>
+						<col style="width:130px" />
+						<col style="width:400px" />
+						<col style="width:130px" />
+						<col />
+					</colgroup>
+					<tbody>
 						<tr>
-							<td>서초동</td>
-							<td class="adrs">
-								받는사람 : 이정은<br />
-								000-000-1488 / 010-3797-1488<br />
-								주소 : 서울서초구효령로67길 34,101동702호(서초동,경남아너스빌)
-							</td>
-							<td>
-								<button type="button" class="btnS btnType6">수정</button>
-								<button type="button" class="btnS btnType6">삭제</button>
-							</td>
+							<th scope="row">주문일자</th>
+							<td>2016-08-01 오전 11:45:45</td>
+							<th scope="row">주문번호</th>
+							<td class="txtColor2">20160801_100028055</td>
 						</tr>
 						<tr>
-							<td>서초동</td>
-							<td class="adrs">
-								받는사람 : 이정은<br />
-								000-000-1488 / 010-3797-1488<br />
-								주소 : 서울서초구효령로67길 34,101동702호(서초동,경남아너스빌)
-							</td>
-							<td>
-								<button type="button" class="btnS btnType6">수정</button>
-								<button type="button" class="btnS btnType6">삭제</button>
-							</td>
+							<th scope="row">주문자정보</th>
+							<td colspan="3">이정은 / 010-3797-1488 / nibbuni27@naver.com</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
 
-			<!-- 레이어 -->
-			<div class="layerPop" style="width:485px;margin:-205px 0 0 -242px;">
-				<h1 class="layerTit">신규배송지 등록</h1>
-				<div class="layerCon">
-					<table class="bbsWrite">
-						<caption>배송지 등록</caption>
-						<colgroup>
-							<col style="width:90px" />
-							<col />
-						</colgroup>
-						<tbody>
-							<tr>
-								<th scope="row">배송지명</th>
-								<td><input type="text" class="inputTxt" style="width:120px;" /></td>
-							</tr>
-							<tr>
-								<th scope="row">받으시는분</th>
-								<td><input type="text" class="inputTxt" style="width:120px;" /></td>
-							</tr>
-							<tr>
-								<th scope="row">연락처</th>
-								<td>
-									<select style="width:100px;">
-										<option>02</option>
-									</select> -
-									<input type="text" class="inputTxt" style="width:87px;" /> -
-									<input type="text" class="inputTxt" style="width:87px;" />
-								</td>
-							</tr>
-							<tr>
-								<th scope="row">휴대폰번호</th>
-								<td>
-									<select style="width:100px;">
-										<option>010</option>
-									</select> -
-									<input type="text" class="inputTxt" style="width:87px;" /> -
-									<input type="text" class="inputTxt" style="width:87px;" />
-								</td>
-							</tr>
-							<tr>
-								<th scope="row">주소</th>
-								<td class="adrs">
-									<span>
-										<input type="text" class="inputTxt" style="width:235px;" /> <button type="button" class="btnM2 btnType1">검색</button>
-									</span>
-									<span><input type="text" class="inputTxt" style="width:311px;" /></span>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="btnWrap">
-					<button type="button" class="btnM btnType1">삭제</button>
-					<button type="button" class="btnM btnType12">저장</button>
-				</div>
-				<p><button type="button" class="layerClose">레이어닫기</button></p>
+			<div class="noMemOrderCom">
+				<section>
+					<h1 class="subTitle3">배송지 정보</h1>
+					<div class="tableList tableListType3">
+						<table>
+							<caption>배송지 정보</caption>
+							<colgroup>
+								<col style="width:130px" />
+								<col />
+							</colgroup>
+							<tbody>
+								<tr>
+									<th scope="row">이 름</th>
+									<td>이정은</td>
+								</tr>
+								<tr>
+									<th scope="row">핸드폰번호</th>
+									<td>010-3797-1488</td>
+								</tr>
+								<tr>
+									<th scope="row">이메일</th>
+									<td>nibbuni27@naver.com</td>
+								</tr>
+								<tr>
+									<th scope="row">주 소</th>
+									<td>서울시 서초구 서초동 1608-28</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</section>
+				<section>
+					<h1 class="subTitle3">결제 정보</h1>
+					<div class="tableList tableListType3">
+						<table>
+							<caption>결제 정보</caption>
+							<colgroup>
+								<col style="width:130px" />
+								<col />
+							</colgroup>
+							<tbody>
+								<tr>
+									<th scope="row">포인트 사용</th>
+									<td class="sale"><img src="images/img_sym4.gif" alt="-" /> 2,550원</td>
+								</tr>
+								<tr>
+									<th scope="row">쿠폰사용</th>
+									<td class="sale"><img src="images/img_sym4.gif" alt="-" /> 2,550원 (재구매 10%할인 쿠폰)</td>
+								</tr>
+								<tr>
+									<th scope="row">최종결제금액</th>
+									<td><strong class="txtColor3">45,000</strong>원</td>
+								</tr>
+								<tr>
+									<th scope="row">결제수단</th>
+									<td class="method">
+										<span>신용카드(롯데카드/일시불)</span>
+										<a href="#" class="btnS btnType12">영수증 발급</a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</section>
 			</div>
-			<!-- //레이어 -->
+
+			<div class="btnWrap">
+				<a href="#" class="btnB2 btnType11">인쇄하기</a>
+				<a href="#" class="btnB2 btnType9">목록으로</a>
+			</div>
 
 		</div>
 	</section>
