--- a/prod_detail.html
+++ b/prod_detail.html
@@ -195,18 +195,6 @@
 				<div class="prodDetailImg">
 					<p class="prodSimg"><img src="images/img_sample4.jpg" alt="" /></p>
 					<p class="prodBimg"><img src="images/img_sample4.jpg" alt="" /></p>
-					<p class="prodOpt">
-						<strong class="type">모든피부용</strong>
-						<span class="point">
-							<span class="point4">4점</span>
-							리뷰(<b>20</b>)
-						</span>
-						<span class="share">
-							<a href="#"><img src="images/btn_facebook2.gif" alt="페이스북" /></a>
-							<a href="#"><img src="images/btn_kakao.gif" alt="카카오톡" /></a>
-							<a href="#"><img src="images/btn_url.gif" alt="URL" /></a>
-						</span>
-					</p>
 				</div>
 				<div class="prodDetailInfo">
 					<h1 class="name">
@@ -250,6 +238,14 @@
 								<td><strong>6,450포인트</strong></td>
 							</tr>
 							<tr>
+								<th scope="row">선택</th>
+								<td>
+									<select style="width:100%;">
+										<option>==옵션선택==</option>
+									</select>
+								</td>
+							</tr>
+							<tr>
 								<th scope="row">수량</th>
 								<td>
 									<span class="option">
@@ -267,6 +263,18 @@
 						<span><a href="#" class="btnB3 btnType12">장바구니</a></span>
 						<span><a href="#" class="btnB3 btnType11">위시리스트</a></span>
 					</div>
+					<p class="prodOpt">
+						<strong class="type">모든피부용</strong>
+						<span class="point">
+							<span class="point4">4점</span>
+							리뷰(<b>20</b>)
+						</span>
+						<span class="share">
+							<a href="#"><img src="images/btn_facebook2.gif" alt="페이스북" /></a>
+							<a href="#"><img src="images/btn_kakao.gif" alt="카카오톡" /></a>
+							<a href="#"><img src="images/btn_url.gif" alt="URL" /></a>
+						</span>
+					</p>
 				</div>
 			</section>
 
